tests/invalid/empty_enum.prsm
// E050: Enum must have at least one entry
enum Empty {
}
